@@ -1,4 +1,4 @@
-BUGS 
-CREDITS 
-README 
+BUGS
+CREDITS
+README
 README-SDL.txt
